script.js update

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     <section id="buttons">
       <button class="clear">C</button>
       <section>
-        <button class="operations" data-value="%">%</button>
-        <button class="operations" data-value="pot2"><em>x</em><sup>2</sup></button>
-        <button class="operations" data-value="sqrt">&Sqrt;<em>x</em></button>
+        <button class="operations" ></button>
+        <button class="operations" ><em></em><sup></sup></button>
+        <button class="operations" ><em></em></button>
         <button class="operations" data-value='/'>&div;</button>
       </section>
       <section>
@@ -48,7 +48,7 @@
         <button class="operations" data-value="+">+</button>
       </section>
       <section>
-        <button class="negative" data-value="+/-">+/-</button>
+        <button class="negative" ></button>
         <button class="numbers" data-value="0">0</button>
         <button class="period">.</button>
         <button class="result operations" data-value="=">=</button>
